# MSc25TomaszChojnacki

./: LICENSE  README.md  literature-review.xlsx
experiments/: pyproject.toml
experiments/codexembed/: pyproject.toml  (+1 more)
figures/: figures.ipynb  pyproject.toml
tcp-framework/: .gitignore  check.sh  ex1.py  ex2.py  ex3.py  ex4.py  main.py  pyproject.toml  rq1.py  rq2.py  rq21.py  rq22.py  rq23.py  rq3.py
tcp-framework/tcp_framework/: __init__.py  dataset.py  deep.py  evaluate.py  metric_calc.py  stats.py  tcp_dataset.py
tcp-framework/tcp_framework/approaches/: __init__.py  approach.py  base_order.py  hybrid.py  proposed.py  random_order.py  tcp_approach.py
tcp-framework/tcp_framework/approaches/baseline/: __init__.py  base_order.py  random_order.py
tcp-framework/tcp_framework/approaches/combinator/: __init__.py  borda_mixed_order.py  code_dist_breaked_order.py  code_dist_broken_order.py  generic_breaked_order.py  generic_broken_order.py  interpolated_order.py  mixed_order.py  passthrough_order.py  random_mixed_order.py  representation_guided_order.py  schulze_mixed_order.py  similarity_breaked_order.py  similarity_broken_order.py
tcp-framework/tcp_framework/approaches/history/: __init__.py  dfe_order.py  exe_time_order.py  f2009_order.py  fail_density_order.py  fold_fails_order.py  fold_failures_order.py  recentness_order.py  rocket_order.py
tcp-framework/tcp_framework/approaches/hybrid/: __init__.py  fail_code_dist_order.py  fail_similarity_order.py  fault_code_dist_order.py
tcp-framework/tcp_framework/approaches/representation/: __init__.py  code_dist_order.py  lazy_code_dist_map.py  proposed.py  similarity_order.py
tcp-framework/tcp_framework/approaches/representation/aggregations/: __init__.py  avg_agg.py  group_agg.py  max_agg.py  min_agg.py
tcp-framework/tcp_framework/approaches/representation/distances/: __init__.py  cos_sim_dist.py  euclid_dist.py  mann_dist.py  vector_dist.py
tcp-framework/tcp_framework/approaches/representation/utils/: __init__.py  group_agg.py  lazy_code_dist_map.py  parser.py  similarities.py  vector_dist.py
tcp-framework/tcp_framework/approaches/simple/: __init__.py  name_dispersity_order.py  test_loc_order.py
tcp-framework/tcp_framework/datatypes/: __init__.py  cycle.py  run_context.py  test_case.py  test_info.py  test_result.py
tcp-framework/tcp_framework/vectorizers/: code_vectorizer.py  codexembed.py
(+8 files in other folders)
