[project]
name = "tcp-framework"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "sentence-transformers>=4.0.1",
    "tqdm>=4.67.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "ruff>=0.11.2",
    "types-tqdm>=4.67.0.20250319",
]

[tool.mypy]
exclude = ["datasets"]
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_calls = true
disallow_any_unimported = true

[tool.ruff]
extend-exclude = ["datasets"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
    "B027",
    "BLE001",
    "C901",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D200",
    "D202",
    "D203",
    "D205",
    "D212",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "ERA001",
    "PGH003",
    "PLC0414",
    "PLR0912",
    "PLR2004",
    "S101",
    "S110",
    "S301",
    "S311",
    "T201",
    "TID252",
    "TRY003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
